<resources>
    <string name="app_name">Rhythm</string>
    <string name="toolbar_changePass">Change Password</string>
    <string name="toolbar_logOut">Log Out</string>
    <string name="toolbar_subtitle">Dashboard</string>

    <string name="navigation_home">Home</string>
    <string name="navigation_my_details">My Details</string>
    <string name="navigation_report">Check Report</string>
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_checkbox">Remember me</string>
    <string name="login_button">Sign In</string>

    <string name="table_heading_my_information">My Information</string>
    <string name="table_heading_doc_information">Doctor Assigned to Me</string>
    <string name="table_heading_device_information">Device Assigned to Me</string>
    <string name="table_drop_down_icon">Drop down icon</string>

    <string name="loading">loading</string>
    <string name="table_heading_notes">Notes</string>
    <string name="table_heading_advice">Advice logged by doctor</string>
    <string name="table_patient_id">Patient ID</string>
    <string name="table_patient_name">Name</string>
    <string name="table_patient_dob">Date of Birth</string>
    <string name="table_patient_gender">Gender</string>
    <string name="table_patient_house">House NO.</string>
    <string name="table_patient_street">Street No.</string>
    <string name="table_patient_city">City</string>
    <string name="table_patient_pin">Pin Code</string>
    <string name="table_patient_state">State</string>
    <string name="table_patient_country">Country</string>
    <string name="table_patient_mobile">Mobile</string>
    <string name="table_patient_email">Email</string>
    <string name="table_patient_enlisted">Enlisted date</string>
    <string name="table_doctor_id">Doctor ID</string>
    <string name="table_doctor_s_name">Doctor\'s name</string>
    <string name="table_admission_date">Admission Date</string>
    <string name="table_hospital_name">Hospital Name</string>
    <string name="table_hospital">Hospital</string>
    <string name="table_hospital_boarding_id">Hospital Boarding ID</string>
    <string name="table_hospital_id">Hospital ID</string>
    <string name="table_device_id">Device ID</string>

    <string name="home_page_content">Rhythm is a platform which is connected to smart IoT devices. The IoT devices helps to capture real-time ECG data. These devices are small and lightweight, making it easy for patients to wear for extended period without discomfort.

\n\nThe devices use machine learning algorithms trained on standard databases alongside real-time geriatric patients, ensuring the most accurate diagnosis possible. The smart devices generate comparative reports that provide a quick evaluation of the patient’s cardiac health.

\n\nThrough Rhythm platform, these reports can be accessed by healthcare professionals at anytime from anywhere, facilitating quick advice and timely intervention if needed.</string>

    <string name="report_view_report">View Report</string>
    <string name="report_session_details">Session Details</string>
    <string name="report_started_at">Started At</string>
    <string name="report_duration">Duration</string>
    <string name="report_average_bpm">Average BPM</string>
    <string name="report_total_beats">Total Analyzed Beats</string>
    <string name="report_normal">Normal (in%)</string>


    <string name="pdf_table_medical_history">Medical history</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_assigned_device_text">Patient has not been assigned any device</string>


</resources>