<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scrollbars="none"
    tools:context=".MyDetailsFragment">


      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:elevation="5dp"
             android:background="@color/white">

            <TableLayout
                android:id="@+id/my_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/table_background">

               <TableRow
                   android:id="@+id/my_info_header"
                   android:layout_width="match_parent"
                   android:padding="10dp"
                   android:background="@color/table_header">
                  <TextView
                      android:layout_weight="3"
                      android:textColor="@color/white"
                      android:textStyle="bold"
                      android:textSize="20sp"
                      android:padding="10sp"
                      android:text="@string/table_heading_my_information"/>
                  <ImageView
                      android:layout_weight="1"
                      android:id="@+id/my_info_toggle"
                      android:layout_gravity="center_vertical"
                      android:src="@drawable/baseline_arrow_drop_down_24"
                      android:contentDescription="@string/table_drop_down_icon" />
               </TableRow>

               <TableLayout
                   android:id="@+id/my_info_row"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:visibility="visible">
               <TableRow
                   android:id="@+id/my_info_row_1"
                   android:padding="10dp">

                  <TextView
                      android:layout_gravity="center"
                      android:layout_weight="1"
                      android:text="@string/table_patient_id"
                      android:textColor="@color/white"/>
                  <TextView
                     android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_2"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_name"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_3"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_dob"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_4"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_gender"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_5"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_house"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_6"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_street"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_7"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_city"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_8"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_pin"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_9"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_state"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_10"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_country"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_11"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_mobile"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_12"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_email"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               <TableRow
                   android:id="@+id/my_info_row_13"
                   android:padding="10dp">
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/table_patient_enlisted"
                      android:layout_gravity="center"
                      android:layout_weight="1"/>
                  <TextView
                      android:textColor="@color/white"
                      android:text="@string/loading"
                      android:layout_weight="2"/>
               </TableRow>
               </TableLayout>

            </TableLayout>
            <ProgressBar
                android:id="@+id/progressBarMD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

         </androidx.cardview.widget.CardView>

         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:elevation="5dp"
            android:background="@color/white">

            <TableLayout
                android:id="@+id/doc_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/table_background">

               <TableRow
                   android:id="@+id/doc_info_header"
                   android:layout_width="match_parent"
                   android:padding="10dp"
                   android:background="@color/table_header">
                  <TextView
                      android:layout_weight="3"
                      android:textColor="@color/white"
                      android:textStyle="bold"
                      android:textSize="20sp"
                      android:padding="10sp"
                      android:text="@string/table_heading_doc_information"/>
                  <ImageView
                      android:layout_weight="1"
                      android:id="@+id/doc_info_toggle"
                      android:layout_gravity="center_vertical"
                      android:src="@drawable/baseline_arrow_drop_down_24"
                      android:contentDescription="@string/table_drop_down_icon" />
               </TableRow>

               <HorizontalScrollView>

               <TableLayout
                   android:id="@+id/doc_info_row"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:visibility="visible">

                  <TableRow
                      android:id="@+id/doc_info_row_1"
                      android:padding="10dp">

                     <TextView
                         android:layout_gravity="center"
                         android:text="@string/table_doctor_id"
                         android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textSize="16sp"
                         android:padding="10sp"/>
                     <TextView
                         android:textColor="@color/white"
                         android:text="@string/table_doctor_s_name"
                         android:layout_gravity="center"
                         android:textStyle="bold"
                         android:textSize="16sp"
                         android:padding="10sp"/>
                     <TextView
                         android:textColor="@color/white"
                         android:text="@string/table_admission_date"
                         android:layout_gravity="center"
                         android:textStyle="bold"
                         android:textSize="16sp"
                         android:padding="10sp"/>
                     <TextView
                         android:textColor="@color/white"
                         android:text="@string/table_hospital_name"
                         android:layout_gravity="center"
                         android:textStyle="bold"
                         android:textSize="16sp"
                         android:padding="10sp"/>
                     <TextView
                         android:textColor="@color/white"
                         android:text="@string/table_hospital_boarding_id"
                         android:layout_gravity="center"
                         android:textStyle="bold"
                         android:textSize="16sp"
                         android:padding="10sp"/>

                  </TableRow>

               </TableLayout>
               </HorizontalScrollView>
            </TableLayout>

         </androidx.cardview.widget.CardView>

         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:elevation="5dp"
             android:background="@color/white">

            <TableLayout
                android:id="@+id/device_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/table_background">

               <TableRow
                   android:id="@+id/device_info_header"
                   android:layout_width="match_parent"
                   android:padding="10dp"
                   android:background="@color/table_header">
                  <TextView
                      android:layout_weight="3"
                      android:textColor="@color/white"
                      android:textStyle="bold"
                      android:textSize="20sp"
                      android:padding="10sp"
                      android:text="@string/table_heading_device_information"/>

               </TableRow>

               <TableLayout
                   android:id="@+id/device_info_row"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:visibility="visible">

                  <TableRow
                      android:id="@+id/device_info_row_1"
                      android:padding="10dp"
                      tools:ignore="UselessParent">

                     <TextView
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:text="@string/default_assigned_device_text"
                         android:textColor="@color/white"/>
                  </TableRow>

               </TableLayout>
            </TableLayout>

         </androidx.cardview.widget.CardView>

         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:elevation="5dp"
             android:background="@color/white">

            <TableLayout
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/table_background">

               <TableRow
                   android:id="@+id/notes_header"
                   android:layout_width="match_parent"
                   android:padding="10dp"
                   android:background="@color/table_header">
                  <TextView
                      android:layout_weight="3"
                      android:textColor="@color/white"
                      android:textStyle="bold"
                      android:textSize="20sp"
                      android:padding="10sp"
                      android:text="@string/table_heading_notes"/>

               </TableRow>
               <TableRow
                   android:id="@+id/notes_row_1"
                   android:padding="10dp"
                   tools:ignore="UselessParent">

                  <TextView
                      android:id="@+id/tvnotes"
                      android:layout_gravity="center"
                      android:layout_weight="1"
                      android:text="@string/loading"
                      android:textColor="@color/white"/>
               </TableRow>


            </TableLayout>

         </androidx.cardview.widget.CardView>

         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:elevation="5dp"
             android:background="@color/white">

            <TableLayout
                android:id="@+id/advice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/table_background">

               <TableRow
                   android:id="@+id/advice_header"
                   android:layout_width="match_parent"
                   android:padding="10dp"
                   android:background="@color/table_header">
                  <TextView
                      android:layout_weight="3"
                      android:textColor="@color/white"
                      android:textStyle="bold"
                      android:textSize="20sp"
                      android:padding="10sp"
                      android:text="@string/table_heading_advice"/>

               </TableRow>
               <TableRow>
                  <androidx.recyclerview.widget.RecyclerView/>
               </TableRow>
            </TableLayout>
         </androidx.cardview.widget.CardView>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:layout_margin="10dp"
             android:text="version"/>



      </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>